# TodoTasks

./: .gitignore  Dockerfile  README.md  pyproject.toml
config/database/: db_helper.py
src/: database.py  main.py  router.py
src/auth/: auth_router.py  auth_settings.py  config.py
src/core/: db_settings.py
src/db/: database.py
src/migrations/: env.py
src/migrations/versions/: 347ebee4eba1_added_new_model.py  6f7bdad622fd_initial_tables.py
src/models/: task_model.py  token_model.py  user_model.py
src/repositories/: repository.py  task_repository.py  token_repository.py  user_repository.py
src/routers/: auth_router.py  task_router.py
src/schemas/: auth_schema.py  schema.py  task_schema.py
src/services/: dependencies.py  task_service.py  user_service.py
src/utils/: repository.py
